--- a/src/mail/templates/confirm-email.edge
+++ b/src/mail/templates/confirm-email.edge
@@ -4,7 +4,7 @@
     </head>
     <body style="background-image: linear-gradient(187.16deg, #181623 0.07%, #191725 51.65%, #0D0B14 98.75%);">
         <div style="padding-left: 5%; padding-right: 5%; padding-top: 6%; color: #ffffff;">
-            <p style="color: #DDCCAA; text-transform: uppercase; text-align: center; margin-top: 10px;">Movie quotes</p>
+            <p style="color: #DDCCAA; text-transform: uppercase; text-align: center; margin-top: 10px;">Product Page</p>
             <p style="margin-top: 72px;">Hola {{name}}!</p>
             <p>Thanks for joining Movie quotes! We really appreciate it. Please click the button below to verify your account:</p>
             <button style="width: 128px; height:38px; background-color: #E31221; border-radius: 4px; border:none;">
