--- a/src/mail/templates/confirm-email.edge
+++ b/src/mail/templates/confirm-email.edge
@@ -12,7 +12,7 @@
             </button>
             <p>If clicking doesn't work, you can try copying and pasting it to your browser:</p>
             <p style="word-break: break-word; color: #DDCCAA;">{{link}}</p>
-            <p style="padding-bottom: 100px;">MovieQuotes Crew</p>
+            <p style="padding-bottom: 100px;">Product Page</p>
         </div>
     </body>
 </html>
